my-apps-disabled/development/temporal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-web
  namespace: temporal
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "temporal.tuxgrid.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: temporal-web
          port: 8080
          weight: 1
